hero height change

--- a/KED/default.html
+++ b/KED/default.html
@@ -629,7 +629,7 @@
       </tbody>
     </table> 
     <lp-layout lp-label="Hero afbeelding">
-      <img src="./images/I6038_936_79_239_30_297.png" alt border="0" width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%" lp-edit>
+      <img src="./images/I6038_936_79_239_30_297.png" alt border="0" width="1000" style="display:block;margin:0 auto;max-width:100%;width:auto;max-height:200px;" lp-edit>
     </lp-layout>
     <lp-repeater>
       <lp-layout lp-label="Intro">
