--- a/KED/default.html
+++ b/KED/default.html
@@ -630,7 +630,7 @@
     </table> 
     <lp-layout lp-label="Hero afbeelding">
       <center>
-        <img src="./images/I6038_936_79_239_30_297.png" alt border="0" width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%;max-height: 200px; object-fit: cover;" lp-edit>
+        <img src="./images/I6038_936_79_239_30_297.png" alt border="0" width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%;height:200px;max-height: 200px; object-fit: cover;" lp-edit>
       </center>
     </lp-layout>
     <lp-repeater>
