app edit content view

--- a/KED/default.html
+++ b/KED/default.html
@@ -157,6 +157,10 @@
     }
   </style>
   <style type="text/css">
+    #fluidImage .lp-editcontent {
+      display: block;
+    }
+
     body {
       font-family: Poppins, Arial, Helvetica, sans-serif
     }
@@ -1028,7 +1032,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
-      <lp-layout lp-label="Afbeelding">
+      <lp-layout lp-label="Afbeelding" id="fluidImage">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
