--- a/KED/default.html
+++ b/KED/default.html
@@ -632,7 +632,7 @@
         </tr>
       </tbody>
     </table> 
-    <lp-layout lp-label="Hero afbeelding">
+    <lp-layout lp-label="Hero afbeelding" id="fluidImage">
       <center>
         <img src="./images/I6038_936_79_239_30_297.png" alt border="0" width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%;height:200px;max-height: 200px; object-fit: cover;" lp-edit>
       </center>
@@ -1032,7 +1032,7 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
-      <lp-layout lp-label="Afbeelding" id="fluidImage">
+      <lp-layout lp-label="Afbeelding">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
