--- a/KED/default.html
+++ b/KED/default.html
@@ -756,6 +756,132 @@
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout>
+      <lp-layout lp-label="Feed">
+        <lp-rss lp-rss-url="https://feedly.com/f/PcwmcYaR7pzkquvdkKLI3Vv4.atom" lp-rss-type="atom" lp-rss-range="1-4">
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
+          <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+            style="background:#fff;background-color:#fff;width:100%">
+            <tbody>
+              <tr>
+                <td style="direction:ltr;font-size:0;padding:16px 24px;text-align:center">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:170px;" ><![endif]-->
+                  <div class="mj-column-px-170 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td align="left" class="lp-edit" style="font-size:0;padding:0;word-break:break-word">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                                      style="border-collapse:collapse;border-spacing:0" class="mj-full-width-mobile">
+                                      <tbody>
+                                        <tr>
+                                          <td style="width:170px" class="mj-full-width-mobile"> 
+                                            <a href="<lp-rss-content:link>" style="text-decoration:none;color:inherit;">
+                                            <lp-rss-image
+                                              style="border:0;border-radius:8px;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
+                                              width="170" height="auto" /> 
+                                            </a>
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:16px;" ><![endif]-->
+                  <div class="mj-column-px-16 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td style="font-size:0;padding:0;word-break:break-word">
+                                    <div style="height:16px;line-height:16px">&#8202;</div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td><td class="" style="vertical-align:top;width:466px;" ><![endif]-->
+                  <div class="mj-column-px-466 mj-outlook-group-fix"
+                    style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                      <tbody>
+                        <tr>
+                          <td style="padding:0;vertical-align:top">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                              <tbody>
+                                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                                  <tbody>
+                                    <tr>
+                                      <td align="left" width="1"
+                                        style="background:#ffca00;border-radius:4px;font-size:0;padding:2px 4px;word-break:break-word">
+                                        <div
+                                          style="color:#0d366e;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:14px;font-weight:700;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap">
+                                          <lp-singleline lp-label="Badge">KED</lp-singleline> </div>
+                                      </td>
+                                      <td width="10" style="max-width:10px;width:10px">&nbsp;</td>
+                                      <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                        <div
+                                          style="color:#0075bf;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:14px;font-weight:700;line-height:16px;text-align:left;text-decoration:none">
+                                          <lp-singleline lp-label="Titel">Categorie</lp-singleline> </div>
+                                      </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                                <tr>
+                                  <td align="left" style="font-size:0;padding:8px 0;word-break:break-word">
+                                    <div
+                                      style="color:#0d366e;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:18px;font-weight:700;line-height:22px;text-align:left;text-decoration:none">
+                                      <h3
+                                        style="font-family:Poppins,Arial,Helvetica,sans-serif;font-size:18px;font-weight:700;line-height:22px">
+                                        <a href="<lp-rss-content:link>" style="text-decoration:none;color:inherit;">
+                                          <lp-rss-content:title></lp-rss-content:title>
+                                        </a>
+                                      </h3>
+                                    </div>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td align="left" style="font-size:0;padding:0;word-break:break-word">
+                                    <div
+                                      style="color:#010a15;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:14px;font-weight:400;line-height:18px;text-align:left;text-decoration:none">
+                                      <a href="<lp-rss-content:link>" style="text-decoration:none;color:inherit;">
+                                        <lp-rss-content:summary></lp-rss-content:summary>
+                                      </a>
+                                    </div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+        </lp-rss>
+      </lp-layout>
       <lp-layout lp-label="Artikel">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
