--- a/KED/default.html
+++ b/KED/default.html
@@ -851,7 +851,7 @@
                                       style="color:#0d366e;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:18px;font-weight:700;line-height:22px;text-align:left;text-decoration:none">
                                       <h3
                                         style="font-family:Poppins,Arial,Helvetica,sans-serif;font-size:18px;font-weight:700;line-height:22px">
-                                        <a href="<lp-rss-content:link>" style="text-decoration:none;color:inherit;">
+                                        <a href="<lp-rss-content:link>" style="text-decoration:none;color:#0d366e !important;">
                                           <lp-rss-content:title></lp-rss-content:title>
                                         </a>
                                       </h3>
@@ -862,8 +862,9 @@
                                   <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                     <div
                                       style="color:#010a15;font-family:Poppins,Arial,Helvetica,sans-serif;font-size:14px;font-weight:400;line-height:18px;text-align:left;text-decoration:none">
-                                      <a href="<lp-rss-content:link>" style="text-decoration:none;color:inherit;">
+                                      <a href="<lp-rss-content:link>" style="text-decoration:none;color:#010a15 !important;">
                                         <lp-rss-content:summary></lp-rss-content:summary>
+                                        <lp-rss-content:link>
                                       </a>
                                     </div>
                                   </td>
