--- a/Drimmelen/default.html
+++ b/Drimmelen/default.html
@@ -1916,8 +1916,40 @@
             </tr>
           </tbody>
         </table>
-      </lp-layout></lp-repeater><img src="./images/wave-repeat-x.png" alt border="0" width="1000"
-      style="display:block;margin:0 auto;max-width:100%;width:100%">
+      </lp-layout></lp-repeater>
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="margin:0 auto;max-width:700px">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%">
+        <tbody>
+          <tr>
+            <td style="direction:ltr;font-size:0;padding:0;text-align:center">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:700px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix"
+                style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:top;width:100%">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                  <tbody>
+                    <tr>
+                      <td style="padding:0;vertical-align:top">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                          <tbody>
+                            <tr>
+                              <td style="font-size:0;padding:0;word-break:break-word">
+                                <div style="height:24px;line-height:24px">&#8202;</div>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div> <!--[if mso | IE]></td></tr></table><![endif]--> <img src="./images/wave-repeat-x.png" alt border="0"
+      width="1000" style="display:block;margin:0 auto;max-width:100%;width:100%">
     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
       style="background:#d9f5d6;background-color:#d9f5d6;width:100%">
       <tbody>
