min-width badge

--- a/Drimmelen/default.html
+++ b/Drimmelen/default.html
@@ -1679,7 +1679,7 @@
                         <td align="left"
                           style="background:#fd81c4;border-radius:4px;font-size:0;padding:4px 8px;word-break:break-word">
                           <div
-                            style="color:#1e3c67;display:inline-block;font-family:Figtree,Arial,sans-serif;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap">
+                            style="color:#1e3c67;display:inline-block;font-family:Figtree,Arial,sans-serif;font-size:12px;font-weight:400;line-height:16px;min-width:fit-content;text-align:left;text-decoration:none;white-space:nowrap">
                             <lp-singleline lp-label="Datum">28 jul. 2025</lp-singleline> </div>
                         </td>
                         <td width="100%">&nbsp;</td>
