--- a/Smellink/email.html
+++ b/Smellink/email.html
@@ -16,7 +16,8 @@
     body {
       margin: 0;
       -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%
+      -ms-text-size-adjust: 100%;
+      font-family: Barlow, Arial;
     }
 
     table,
@@ -188,6 +189,7 @@
 
     .lp-toc-link a {
       color: #233971;
+      font-family: Barlow, Arial;
     }
 
     .multi-text a {
